# whisper-api

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
