[tool.poetry]
name = "whisper-api"
version = "0.1.0"
description = ""
authors = ["Hassan Tahir <hassan_tahir96@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
whisper = { git = "https://github.com/openai/whisper.git", branch = "main" }
torch = "1.12"
tqdm = "^4.64.1"
ffmpeg-python = "^0.2.0"
numpy = "^1.23.5"
transformers = "^4.25.1"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
